fix numbers so layout doesn't jump

--- a/src/components/home/animations/StatsCounter/StatsCounter.module.css
+++ b/src/components/home/animations/StatsCounter/StatsCounter.module.css
@@ -8,8 +8,23 @@
     color: var(--ens-magenta);
 }
 
+.stat:nth-of-type(1) .value {
+    width: calc(7ch);
+}
+
+.stat:nth-of-type(2) .value {
+    width: calc(3ch);
+}
+
+.stat:nth-of-type(3) .value {
+    width: calc(6ch);
+}
+
 .stat {
     color: var(--ens-dark-blue);
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
 
     font-size: 32px;
     line-height: 96%;
@@ -28,6 +43,7 @@
         font-size: 62px;
         line-height: 90%; 
         letter-spacing: -1.241px; 
+        gap: 14px;
     }
     .bg {
         top: -150px;
@@ -44,6 +60,7 @@
         font-size: 100px;
         line-height: 90%; 
         letter-spacing: -2px; 
+        gap: 24px;
     }
     .bg {
         top: 0;
